plugins{
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
}
version=mod_version
group=mod_group_id
repositories{
    mavenLocal()
    maven{url="https://maven.createmod.net"}
    maven{url="https://maven.ithundxr.dev/snapshots"}
    maven{url="https://maven.maxhenkel.de/repository/public"}
    maven{url="https://api.modrinth.com/maven"}
}
base{
    archivesName=mod_id
}
java.toolchain.languageVersion=JavaLanguageVersion.of(21)
configurations{
    libraries
    implementation.extendsFrom libraries
}
configurations.matching{it.name=="additionalRuntimeClasspath"}.configureEach{
    extendsFrom configurations.libraries
}
neoForge{
    version=project.neo_version
    runs{
        client{
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces',project.mod_id
        }
        server{
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces',project.mod_id
        }
        gameTestServer{
            type="gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces',project.mod_id
        }
        data{
            data()
            programArguments.addAll '--mod',project.mod_id,'--all','--output',file('src/generated/resources/').getAbsolutePath(),'--existing',file('src/main/resources/').getAbsolutePath()
        }
        configureEach{
            systemProperty 'forge.logging.markers','REGISTRIES'
            logLevel=org.slf4j.event.Level.DEBUG
        }
    }
    mods{
        "${mod_id}"{
            sourceSet(sourceSets.main)
        }
    }
}
sourceSets.main.resources{srcDir 'src/generated/resources'}
dependencies{
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim"){
        transitive=false
    }
    implementation("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    implementation("com.tterrag.registrate:Registrate:${registrate_version}")
    compileOnly("maven.modrinth:sound-physics-remastered:neoforge-${minecraft_version}-${spr_version}")
    runtimeOnly("maven.modrinth:sound-physics-remastered:neoforge-${minecraft_version}-${spr_version}")
    libraries("com.github.wendykierp:JTransforms:${jtransform_version}")
    jarJar("com.github.wendykierp:JTransforms:${jtransform_version}"){
        version{
            strictly "[${jtransform_version},3.2)"
            prefer "${jtransform_version}"
        }
    }
    jarJar("pl.edu.icm:JLargeArrays:1.5"){
        version{
            strictly "[1.5,1.6)"
            prefer "1.5"
        }
    }
    jarJar("org.apache.commons:commons-math3:3.5"){
        version{
            strictly "[3.5,3.6)"
            prefer "3.5"
        }
    }
}
var generateModMetadata=tasks.register("generateModMetadata",ProcessResources){
    var replaceProperties=[minecraft_version:minecraft_version,minecraft_version_range:minecraft_version_range,
                           neo_version:neo_version,neo_version_range:neo_version_range,
                           loader_version_range:loader_version_range,mod_id:mod_id,
                           mod_name:mod_name,mod_license:mod_license,mod_version:mod_version,
                           mod_authors:mod_authors,mod_description:mod_description,
                           create_version_range:create_version_range,spr_version_range:spr_version_range]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata
publishing{
    publications{
        register('mavenJava',MavenPublication){
            from components.java
        }
    }
    repositories{
        maven{
            url "file://${project.projectDir}/repo"
        }
    }
}
idea{
    module{
        downloadSources=true
        downloadJavadoc=true
    }
}